Tweaked weird padding and horizontal alignment issues

--- a/frontend/src/componments/DeveloperSection.css
+++ b/frontend/src/componments/DeveloperSection.css
@@ -1,6 +1,6 @@
 .developer-section-container {
     left: 0px;
-    width: 100%;
+    width: 100vw;
     height: fit-content;
     position: absolute;
     bottom: 0px;
