--- a/frontend/src/containers/GridContainer.css
+++ b/frontend/src/containers/GridContainer.css
@@ -9,9 +9,7 @@
 
 .centered-grid-container {
     display: grid;
-    padding: 10px;
     z-index: 2;
     position: absolute;
-    padding-right: 7vw;
-    width: calc(100vw - 80px);
+    width: 100vw;
 }
